--- a/simple maze - Copy - Copy 4.16/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/simple maze - Copy - Copy 4.16/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,26 +1,4 @@
-[/Script/UnrealEd.EditorPerProjectUserSettings]
-bDisplayDocumentationLink=False
-bDisplayActionListItemRefIds=False
-bAlwaysGatherBehaviorTreeDebuggerData=False
-bUseSimplygonSwarm=False
-SimplygonServerIP=127.0.0.1
-bEnableSwarmDebugging=False
-SimplygonSwarmDelay=5000
-SwarmNumOfConcurrentJobs=16
-SwarmMaxUploadChunkSizeInMB=100
-SwarmIntermediateFolder=D:/Users/jayden.fac6880/Desktop/simple maze - Copy - Copy 4.16/Intermediate/Simplygon/
-bMonitorEditorPerformance=True
-bShowCompilerLogOnCompileError=False
-bMapSkeletalMotionToRoot=False
-bAnimationReimportWarnings=False
-bSCSEditorShowFloor=False
-SCSViewportCameraSpeed=4
-AssetViewerProfileName=
-MaterialQualityLevel=1
-
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=0,Y=120)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -47,10 +25,11 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=720
-MultipleInstanceLastWidth=1280
-LastExecutedLaunchDevice=WindowsNoEditor@1806C006
-LastExecutedLaunchName=1806C006
+MultipleInstanceLastHeight=0
+MultipleInstanceLastWidth=0
+LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-HPPCG7Q
+LastExecutedLaunchName=DESKTOP-HPPCG7Q
+LastExecutedPIEPreviewDevice=
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
