--- a/simple maze - Copy - Copy 4.16/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/simple maze - Copy - Copy 4.16/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -85,10 +85,15 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/MainMenu/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/player1.player1
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD
+OpenAssetsAtExit=/Game/Blueprints/NewPlayerController.NewPlayerController
+OpenAssetsAtExit=/Game/Blueprints/NewPlayerController2.NewPlayerController2
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -538,6 +543,9 @@ player2_C.Camera=True
 player2_C.Pawn=True
 player2_C.Input=True
 player2_C.Actor=True
+FirstPersonHUD_C.Tick=True
+FirstPersonHUD_C.Default=True
+FirstPersonHUD_C.HUD=True
 
 [AssetEditorToolkitTabLocation]
 /Game/MainMenu/MainMenuWidget.MainMenuWidget=1
@@ -564,7 +572,7 @@ Widget=
 Visual=
 
 [RootWindow]
-ScreenPosition=X=1705.000 Y=283.000
+ScreenPosition=X=1719.000 Y=949.000
 WindowSize=X=1330.000 Y=794.000
 InitiallyMaximized=True
 
