--- a/simple maze - Copy - Copy 4.16/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/simple maze - Copy - Copy 4.16/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,7 +92,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -773,6 +773,69 @@ REINST_pickup_bomb_C_840.Tags=True
 REINST_pickup_bomb_C_840.Cooking=True
 REINST_pickup_bomb_C_840.Input=True
 REINST_pickup_bomb_C_840.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Tonemapper=True
+PostProcessVolume.Mobile Tonemapper=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+Skysphere_C.Tick=True
+Skysphere_C.Rendering=False
+Skysphere_C.Replication=True
+Skysphere_C.Input=True
+Skysphere_C.Actor=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+SkySphere_C.TransformCommon=True
+Actor.TransformCommon=True
+Actor.Actor=True
+ProjectPackagingSettings.Prerequisites=True
+Engine.Screenshots=True
+NavigationSystem.Navigation=True
+BlueprintEditorProjectSettings.Blueprints=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Class Filtering=True
+AndroidRuntimeSettings.Audio=True
+IOSRuntimeSettings.Audio=True
+OculusHMDRuntimeSettings.SplashScreen=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
 
 [AssetEditorToolkitTabLocation]
 /Game/MainMenu/MainMenuWidget.MainMenuWidget=1
@@ -792,6 +855,12 @@ REINST_pickup_bomb_C_840.Actor=True
 /Engine/ArtTools/RenderToTexture/Blueprints/RenderToTexture_LevelBP.RenderToTexture_LevelBP=1
 /Game/FirstPersonBP/Blueprints/player2.player2=1
 /Game/pickup_bomb.pickup_bomb=1
+/Game/New_Assets/Blank.Blank=1
+/Game/New_Assets/New_Maze_Cube_1_Mat.New_Maze_Cube_1_Mat=1
+/Game/New_Assets/New_Maze_Cube_2_Mat.New_Maze_Cube_2_Mat=1
+/Game/New_Assets/Skydome.Skydome=1
+/Game/FirstPerson/Meshes/CubeMaterialOverride.CubeMaterialOverride=1
+/Game/Geometry/Meshes/1M_Cube.1M_Cube=1
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -802,6 +871,9 @@ Widget=
 Visual=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [RootWindow]
 ScreenPosition=X=-952.000 Y=269.000
@@ -1460,12 +1532,110 @@ PrimType=1
 ChangeVariableType_Warning=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [DetailCategoriesAdvanced]
 BoolProperty.Variable=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/New_Assets/Barrier.Barrier;
+RecentlyPlaced=/Game/New_Assets/Blank.Blank;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/New_Assets/New_Maze_Cube_2.New_Maze_Cube_2;
+RecentlyPlaced=/Game/New_Assets/New_Maze_Cube_1.New_Maze_Cube_1;
+RecentlyPlaced=/Game/New_Assets/SkySphere.SkySphere;
+RecentlyPlaced=/Game/New_Assets/Skybox_Mat.Skybox_Mat;
+RecentlyPlaced=/Game/New_Assets/Maze_Floor_Mat.Maze_Floor_Mat;
+RecentlyPlaced=/Game/New_Assets/Skydome.Skydome;
 RecentlyPlaced=/Game/pickup_bomb.pickup_bomb;
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[DetailCustomWidgetExpansion]
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+bKeepOverlappingVertices=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[SelectionDetails]
+PreserveScaleRatio=False
+
+[MaterialInstanceEditor]
+LightDir=P=-39.999985 Y=27.499968 R=0.000000
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+bWantsMobileStats=False
 
 
