--- a/simple maze - Copy - Copy 4.16/Config/DefaultEngine.ini
+++ b/simple maze - Copy - Copy 4.16/Config/DefaultEngine.ini
@@ -60,6 +60,7 @@ bSuppressFaceRemapTable=False
 bSupportUVFromHitResults=False
 bDisableActiveActors=False
 bDisableCCD=False
+bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
 bSubstepping=False
 bSubsteppingAsync=False
@@ -68,3 +69,8 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
+PhysXTreeRebuildRate=10
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
