--- a/simple maze - Copy - Copy 4.16/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/simple maze - Copy - Copy 4.16/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -55,8 +55,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0",BufferVisualizationMode="",ExposureSettings=(LogOffset=0,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/MainMenu/MainMenu
+MRUItem0=/Game/MainMenu/MainMenu
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -69,7 +69,7 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/MainMenu/EndGameMenu
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -89,7 +89,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/MainMenu/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -773,6 +773,78 @@ REINST_pickup_bomb_C_840.Tags=True
 REINST_pickup_bomb_C_840.Cooking=True
 REINST_pickup_bomb_C_840.Input=True
 REINST_pickup_bomb_C_840.Actor=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Rendering=True
+TextRenderActor.Lighting=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Input=True
+plane_C.Tick=True
+plane_C.Default=True
+plane_C.Replication=True
+AmbientSound.TransformCommon=True
+AmbientSound.Sound=True
+AmbientSound.Attenuation=True
+AmbientSound.Modulation=True
+AmbientSound.Filter=True
+AmbientSound.Concurrency=True
+AmbientSound.Tags=True
+AmbientSound.Activation=True
+AmbientSound.Cooking=True
+AmbientSound.Rendering=True
+AmbientSound.Actor=True
+MainMenuWidget_C.Appearance=True
+MainMenuWidget_C.Interaction=True
+MainMenuWidget_C.Input=True
+MainMenuWidget_C.Designer=True
+MainMenuWidget_C.Layout=True
+MainMenuWidget_C.Behavior=True
+MainMenuWidget_C.Clipping=True
+MainMenuWidget_C.Performance=True
+MainMenuWidget_C.Render Transform=True
+MainMenuWidget_C.Navigation=True
+newMenu_C.Appearance=True
+newMenu_C.Interaction=True
+newMenu_C.Input=True
+newMenu_C.Designer=True
+newMenu_C.Layout=True
+newMenu_C.Behavior=True
+newMenu_C.Clipping=True
+newMenu_C.Performance=True
+newMenu_C.Render Transform=True
+newMenu_C.Navigation=True
+controls_C.Appearance=True
+controls_C.Interaction=True
+controls_C.Input=True
+controls_C.Designer=True
+controls_C.Layout=True
+controls_C.Behavior=True
+controls_C.Clipping=True
+controls_C.Performance=True
+controls_C.Render Transform=True
+controls_C.Navigation=True
+EndScreenplayer1Win_C.Appearance=True
+EndScreenplayer1Win_C.Interaction=True
+EndScreenplayer1Win_C.Input=True
+EndScreenplayer1Win_C.Designer=True
+EndScreenplayer1Win_C.Layout=True
+EndScreenplayer1Win_C.Behavior=True
+EndScreenplayer1Win_C.Clipping=True
+EndScreenplayer1Win_C.Performance=True
+EndScreenplayer1Win_C.Render Transform=True
+EndScreenplayer1Win_C.Navigation=True
+EndScreenplayer2Win_C.Appearance=True
+EndScreenplayer2Win_C.Interaction=True
+EndScreenplayer2Win_C.Input=True
+EndScreenplayer2Win_C.Designer=True
+EndScreenplayer2Win_C.Layout=True
+EndScreenplayer2Win_C.Behavior=True
+EndScreenplayer2Win_C.Clipping=True
+EndScreenplayer2Win_C.Performance=True
+EndScreenplayer2Win_C.Render Transform=True
+EndScreenplayer2Win_C.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/MainMenu/MainMenuWidget.MainMenuWidget=1
@@ -792,6 +864,12 @@ REINST_pickup_bomb_C_840.Actor=True
 /Engine/ArtTools/RenderToTexture/Blueprints/RenderToTexture_LevelBP.RenderToTexture_LevelBP=1
 /Game/FirstPersonBP/Blueprints/player2.player2=1
 /Game/pickup_bomb.pickup_bomb=1
+/Game/MainMenu/MainMenu.MainMenu:PersistentLevel.MainMenu=1
+/Game/plane.plane=1
+/Game/MainMenu/newMenu.newMenu=1
+/Game/MainMenu/controls.controls=1
+/Game/MainMenu/EndGameMenu/EndScreenplayer1Win.EndScreenplayer1Win=1
+/Game/MainMenu/EndGameMenu/EndScreenplayer2Win.EndScreenplayer2Win=1
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -804,7 +882,7 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [RootWindow]
-ScreenPosition=X=-952.000 Y=269.000
+ScreenPosition=X=250.000 Y=159.000
 WindowSize=X=1330.000 Y=794.000
 InitiallyMaximized=True
 
@@ -822,7 +900,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Nik/Documents/GItKraken/take 2.2/simple maze - Copy - Copy 4.16/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/Nik/Documents/GItKraken/take 2.2/simple maze - Copy - Copy 4.16/Content/MainMenu
 BRUSH=D:/Users/jayden.fac6880/Desktop/simple maze - Copy - Copy 4.16/Content/
 FBX=D:/Users/jayden.fac6880/Desktop/simple maze - Copy - Copy 4.16/Content/
 FBXAnim=D:/Users/jayden.fac6880/Desktop/simple maze - Copy - Copy 4.16/Content/
@@ -1372,7 +1450,7 @@ BlueprintProfiler.TimeStamp=2017.09.30-12.19.00
 BlueprintProfiler.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2017.09.30-12.19.00
 BlueprintGraph.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2017.08.23-03.28.55
+SequencerWidgets.TimeStamp=2017.09.30-12.19.52
 SequencerWidgets.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2017.08.18-03.00.12
 ExternalImagePicker.LastCompileMethod=Unknown
@@ -1466,6 +1544,7 @@ LastLogListing=PIE
 BoolProperty.Variable=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
 RecentlyPlaced=/Game/pickup_bomb.pickup_bomb;
 
 
